extract_exe = executable('extract', 'extract.c',
	include_directories : inc,
	dependencies: chmlib_deps,
	link_with : chmlib_lib)
enum_exe = executable('enum', 'enum.c',
	include_directories : inc,
	dependencies: chmlib_deps,
	link_with : chmlib_lib)
chm_http_exe = executable('chm_http', 'chm_http.c',
	include_directories : inc,
	dependencies: chmlib_deps,
	link_with : chmlib_lib)

